Modifying project1.ipynb

--- a/Preprocessing/project1.ipynb
+++ b/Preprocessing/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "ce14eb1a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e89399bf",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "3f28a16f",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "873246b4",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "bc22616d",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "2d23a5f8",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "ec8622be",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "5e300007",
    "metadata": {},
    "outputs": [
@@ -282,16 +282,16 @@
      "text": [
       "Input sentence: Atrocities, alleged war crimes and civilians caught in the crossfire of Africa's largest war\n",
       "Top 5 closest matches from dataset :-\n",
-      "1. Headline - Syrian Army In 'Final Stages' Of Aleppo Offensive\n",
-      "---> Description - It was the country's largest city before the war.\n",
-      "2. Headline - Iraqi Military Says It's Taken Most Of ISIS Stronghold In Country's Northwest\n",
-      "---> Description - Retaking Tal Afar was the latest objective in the U.S.-backed war on ISIS following the recapture in July of Mosul.\n",
-      "3. Headline - Al Qaeda Militants Seize Part Of Yemen's Main Port City Of Aden\n",
-      "---> Description - The war in Yemen has led to dangerous instability.\n",
-      "4. Headline - Bangladesh Executes 2 Opposition Leaders For War Crimes\n",
-      "---> Description - The pair were convicted of war crimes committed during the country's 1971 war of independence.\n",
-      "5. Headline - Both Sides In The Battle Of Aleppo Committed War Crimes: UN\n",
-      "---> Description - The report also revealed Syrian government jets deliberately bombed a humanitarian convoy.\n"
+      "1.  Headline - Deadly Violence In Yemen Threatens Fragile Truce\n",
+      "--> Description - The war has caused a humanitarian crisis in the impoverished country.\n",
+      "2.  Headline - Both Sides In The Battle Of Aleppo Committed War Crimes: UN\n",
+      "--> Description - The report also revealed Syrian government jets deliberately bombed a humanitarian convoy.\n",
+      "3.  Headline - Al Qaeda Militants Seize Part Of Yemen's Main Port City Of Aden\n",
+      "--> Description - The war in Yemen has led to dangerous instability.\n",
+      "4.  Headline - Bangladesh Executes 2 Opposition Leaders For War Crimes\n",
+      "--> Description - The pair were convicted of war crimes committed during the country's 1971 war of independence.\n",
+      "5.  Headline - Iraqi Military Says It's Taken Most Of ISIS Stronghold In Country's Northwest\n",
+      "--> Description - Retaking Tal Afar was the latest objective in the U.S.-backed war on ISIS following the recapture in July of Mosul.\n"
      ]
     }
    ],
@@ -302,8 +302,8 @@
     "matches = closest_sentences(input)\n",
     "num = 1\n",
     "for sen in matches:\n",
-    "    print(f\"{num}. Headline - {sen[0]}\")\n",
-    "    print(f\"---> Description - {sen[1]}\")\n",
+    "    print(f\"{num}.  Headline - {sen[0]}\")\n",
+    "    print(f\"--> Description - {sen[1]}\")\n",
     "    num += 1"
    ]
   }
